# nlp-rs

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  Dioxus.toml
frontend/src/: main.rs  obj.rs
