[package]
name = "backend"
version = "0.1.0"
authors = ["Akshay Mor <mor.akshay577@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = "4.0.1"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
# diesel = { version = "1.4.2", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.1"
r2d2 = "0.8.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
# actix-service = "2.0.2"
# alcoholic_jwt = "1.0.1"
reqwest = "0.11.10"
actix-rt = "2.7.0"
log = "0.4"
env_logger = "0.9.0"
rand = "0.8.5"
lingua = "1.4.0"
actix-cors = "0.6.1"
rust-bert = "0.17.0"
tokio = "1.18.2"
tch = "0.6.1"