[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["web"] }
log = "0.4.17"
reqwest = { version = "0.11.10", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
